# CMake_project_preparation

./: README.md
CUDA_TOOLKIT_/: CMakeLists.txt
DEFER/: CMakeLists.txt
DEPRECATED_LIST/: CMakeLists.txt
KOKKOS_OPTION/: CMakeLists.txt
ON_Basis/: CMakeLists.txt
ON_Basis/cmake_parent_test/: CMakeLists.txt
OPenMP/: CMakeLists.txt
Object_lib/include/: rk4_solver.hpp
SHARED_LIB/: CMakeLists.txt
Tests/: CMakeLists.txt
precompile_header/: CMakeLists.txt
precompile_header/include/: advection.h  diagnostic.h  distribution.h  grid.h  interpolation.h  plasma_type.h  poisson.h  solver.h
precompile_header/src/: CMakeLists.txt  advection.cpp  diagnostic.cpp  distribution.cpp  grid.cpp  interpolation.cpp  main.cpp  poisson.cpp  solver.cpp
precompile_header/tests/: CMakeLists.txt  test_conservative.cpp  test_grid.cpp  test_interp.cpp  test_poisson.cpp
std_ext_ftr/: CMakeLists.txt
