cmake_minimum_required(VERSION 3.22 FATAL_ERROR)
project(Sajid_Testing_Basis CXX)
if(Sajid_ENABLE_FEATURES)
    message(STATUS "Sajid_ENABLE_FEATURES is ON")
endif()
if("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
  message(
    FATAL_ERROR
      "FATAL: In-source builds are not allowed. You should create a separate directory for build files and delete CMakeCache.txt."
  )
else()
    message(STATUS "CMake source dir: ${CMAKE_SOURCE_DIR}")
endif()
set(Sajid_Enable_XYZ ON)
set(Sajid_Enable_ABC ON)
set(Sajid_Enable_DEF ON)
set(Sajid_Enable_GHI ON)
get_cmake_property(_variableNames VARIABLES)
set(Sajid_GIVEN_VARIABLES)
foreach(var ${_variableNames})
    string(TOUPPER ${var} UC_VAR)
    string(FIND ${UC_VAR} SAJID Idx)
    if (Idx EQUAL 0)
        list(APPEND Sajid_GIVEN_VARIABLES ${var})
    endif()
endforeach()

foreach(found_var IN LISTS Sajid_GIVEN_VARIABLES)
    message(STATUS "-> Found Variables: ${found_var}")
endforeach()
message(STATUS " Hi current source dir = ${CMAKE_CURRENT_SOURCE_DIR}")
message(STATUS " Hi current binary dir = ${CMAKE_CURRENT_BINARY_DIR}")
add_subdirectory(cmake_parent_test/)