cmake_minimum_required(VERSION 3.28)
project(SOpenMp LANGUAGES CXX)
find_package(OpenMP REQUIRED COMPONENTS CXX)
message(STATUS "OpenMP CXX Found: ${OpenMP_CXX_FOUND}")
message(STATUS "OpenMP CXX Version: ${OpenMP_CXX_VERSION}")
if(OpenMP_CXX_VERSION AND OpenMP_CXX_VERSION VERSION_LESS 3.0)
    message(FATAL_ERROR "OpenMP CXX version ${OpenMP_CXX_VERSION} is < 3.0")
endif()
message(STATUS "OpenMP CXX Flags: ${OpenMP_CXX_FLAGS}")
if(TARGET OpenMP::OpenMP_CXX)
    message(STATUS "Success! The modern target 'OpenMP::OpenMP_CXX' is ready to use.")
else()
    message(FATAL_ERROR "Error! The modern target 'OpenMP::OpenMP_CXX' is not available.")
endif()