cmake_minimum_required(VERSION 3.16)
project(SemiLagrange VERSION 1.0.0 DESCRIPTION "semi-lagrange vlasov-poisson plasma kinetic solver" LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
endif()

message(STATUS "Build type : ${CMAKE_BUILD_TYPE}")
option(PLASMA_ENABLE_TESTS "Build unit tests" ON)
option(PLASMA_ENABLE_OPENMP "Enable OpenMP Parallelism" ON)
option(PLASMA_VERBOSE_OUTPUT "print verbose solver output" OFF)

find_package(OpenMP)
add_subdirectory(src)
if(PLASMA_ENABLE_TEST)
    enable_testing()
    add_subdirectory(tests)
endif()