macro(plasma_test name src)
    add_executable(${name} ${src})
    target_link_libraries(${name} PRIVATE plasma_core)
    target_compile_headers(${name} REUSE_FROM plasma_core)
    add_test(NAME ${name} COMMAND ${name})
endmacro()
plasma_test(test_grid test_grid.cpp)
plasma_test(test_poisson test_poisson.cpp)
plasma_test(test_interp test_interp.cpp)
plasma_test(test_conservation test_conservation.cpp)